--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -118,6 +118,9 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.custom" />
+            <meta-data
                 android:name="com.android.settings.icon"
                 android:resource="@drawable/ic_settings_buttons" />
             <meta-data
